# mailprocessor

./: .gitignore  README.md  gmail_client.py  main.py  pyproject.toml  task_parser.py  tasks.md.example
docs/: architecture.md  doel.md
docs/brainstorms/: 2026-06-13-mailprocessor-requirements.md
docs/plans/: 2026-06-13-001-feature-mailprocessor-plan.md
launchd/: com.harmsen.mailprocessor.plist
src/: agent_runner.py  browser_tools.py  disk.py  gmail_client.py  main.py
tests/: conftest.py  test_agent_runner.py  test_disk.py  test_gmail_client.py  test_task_parser.py
tests/fixtures/: anthropic_message.json  leap_message.json  malicious_message.json  tasks_sample.md
